# intro_parallel_computing

./: .gitignore
Problem_sets/Problem_Set_1/: CMakeLists.txt  bk  student_func.cu
Problem_sets/Problem_Set_2/: CMakeLists.txt  student_func.cu
Problem_sets/Problem_Set_3/: CMakeLists.txt  student_func.cu
